chore: enhance existing code

--- a/app/src/main/res/layout-sw600dp/list_item_announcement.xml
+++ b/app/src/main/res/layout-sw600dp/list_item_announcement.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:src="@drawable/test"/>
+                tools:src="@drawable/ic_photo_camera_black_24dp"/>
 
             <LinearLayout
                 android:id="@+id/detailHolder"
