--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1B5E20</color>
-    <color name="colorPrimaryDark">#003300</color>
-    <color name="colorAccent">#4C8C4A</color>
+    <color name="colorPrimary">#00796B</color>
+    <color name="colorPrimaryDark">#00695C</color>00695C
+    <color name="colorAccent">#FF5252</color>
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorSecondaryText">#757575</color>
+    <color name="colorDivider">#EFEFEF</color>
     <color name="colorTransparentBlack">#FFFFFFFF</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorTransparent">#00FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorLight">#707070</color>
     <color name="colorRed">#F44336</color>
-    <color name="colorUltraLightGrey">#EFEFEF</color>
     <color name="colorAppBarTransparency">#10000000</color>
     <color name="colorRedTransparent">#2CFA365C</color>
     <color name="colorDarkGrey">#2b3338</color>
