--- a/app/src/main/res/drawable-sw600dp/list_item_border_line.xml
+++ b/app/src/main/res/drawable-sw600dp/list_item_border_line.xml
@@ -12,7 +12,7 @@
 
             <stroke
                 android:width="1dp"
-                android:color="@color/colorUltraLightGrey"/>
+                android:color="@color/colorDivider"/>
         </shape>
     </item>
 </layer-list>
