--- a/app/src/main/res/layout/fragment_announcement_details.xml
+++ b/app/src/main/res/layout/fragment_announcement_details.xml
@@ -27,6 +27,8 @@
                 android:id="@+id/contentHolder"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
+                tools:visibility="visible"
                 android:paddingBottom="@dimen/spacer4">
 
                 <com.synnapps.carouselview.CarouselView
