--- a/app/src/main/res/layout/fragment_subscribe.xml
+++ b/app/src/main/res/layout/fragment_subscribe.xml
@@ -3,128 +3,142 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/spacer4"
-        android:layout_marginStart="@dimen/fragment_horizontal_margin"
-        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
-        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
-        android:layout_marginRight="@dimen/fragment_horizontal_margin"
-        tools:context=".views.account.subscribe.SubscribeFragment">
+        android:layout_height="match_parent">
 
-        <ScrollView
+        <include
+            android:id="@+id/toolbarHolder"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/contentHolder"
+            android:layout_height="wrap_content"
+            layout="@layout/app_bar"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/fragment_horizontal_margin"
+            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
+            android:layout_marginRight="@dimen/fragment_horizontal_margin"
+            tools:context=".views.account.subscribe.SubscribeFragment">
+
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="match_parent"
+                android:padding="@dimen/spacer4">
 
-                <com.wolasoft.waul.widgets.CustomEditText
-                    android:id="@+id/emailEdit"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/contentHolder"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/spacer12"
-                    style="@style/EditTextEmail"
-                    android:hint="@string/account_subscribe_edittext_email_hint"
-                    android:layout_marginTop="@dimen/spacer6"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toEndOf="parent" />
+                    android:layout_height="wrap_content" >
 
-                <com.wolasoft.waul.widgets.CustomEditText
-                    android:id="@+id/phoneNumberEdit"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/spacer12"
-                    style="@style/EditTextPhoneNumber"
-                    android:hint="@string/account_subscribe_edittext_phone_number_hint"
-                    android:layout_marginTop="@dimen/spacer2"
-                    app:layout_constraintTop_toBottomOf="@id/emailEdit"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toEndOf="parent" />
+                    <com.wolasoft.waul.widgets.CustomEditText
+                        android:id="@+id/emailEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacer12"
+                        style="@style/EditTextEmail"
+                        android:hint="@string/account_subscribe_edittext_email_hint"
+                        android:layout_marginTop="@dimen/spacer6"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toEndOf="parent" />
 
-                <com.wolasoft.waul.widgets.CustomEditText
-                    android:id="@+id/lastNameEdit"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/spacer12"
-                    style="@style/EditText"
-                    android:hint="@string/account_subscribe_edittext_last_name_hint"
-                    android:inputType="textEmailAddress"
-                    android:layout_marginTop="@dimen/spacer2"
-                    app:layout_constraintTop_toBottomOf="@id/phoneNumberEdit"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toEndOf="parent" />
+                    <com.wolasoft.waul.widgets.CustomEditText
+                        android:id="@+id/phoneNumberEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacer12"
+                        style="@style/EditTextPhoneNumber"
+                        android:hint="@string/account_subscribe_edittext_phone_number_hint"
+                        android:layout_marginTop="@dimen/spacer2"
+                        app:layout_constraintTop_toBottomOf="@id/emailEdit"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toEndOf="parent" />
 
-                <com.wolasoft.waul.widgets.CustomEditText
-                    android:id="@+id/firstNameEdit"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/spacer12"
-                    style="@style/EditText"
-                    android:hint="@string/account_subscribe_edittext_first_name_hint"
-                    android:layout_marginTop="@dimen/spacer2"
-                    app:layout_constraintTop_toBottomOf="@id/lastNameEdit"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toEndOf="parent" />
+                    <com.wolasoft.waul.widgets.CustomEditText
+                        android:id="@+id/lastNameEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacer12"
+                        style="@style/EditText"
+                        android:hint="@string/account_subscribe_edittext_last_name_hint"
+                        android:inputType="textEmailAddress"
+                        android:layout_marginTop="@dimen/spacer2"
+                        app:layout_constraintTop_toBottomOf="@id/phoneNumberEdit"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toEndOf="parent" />
 
-                <com.wolasoft.waul.widgets.CustomEditText
-                    android:id="@+id/passwordEdit"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/spacer12"
-                    style="@style/EditTextPassword"
-                    android:hint="@string/account_subscribe_edittext_password_hint"
-                    android:layout_marginTop="@dimen/spacer2"
-                    app:layout_constraintTop_toBottomOf="@id/firstNameEdit"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toEndOf="parent" />
+                    <com.wolasoft.waul.widgets.CustomEditText
+                        android:id="@+id/firstNameEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacer12"
+                        style="@style/EditText"
+                        android:hint="@string/account_subscribe_edittext_first_name_hint"
+                        android:layout_marginTop="@dimen/spacer2"
+                        app:layout_constraintTop_toBottomOf="@id/lastNameEdit"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toEndOf="parent" />
 
-                <TextView
-                    android:id="@+id/passwordInfo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/account_subscribe_password_info"
-                    style="@style/body2.main"
-                    android:textSize="10sp"
-                    android:layout_marginTop="@dimen/spacer2"
-                    app:layout_constraintTop_toBottomOf="@id/passwordEdit"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toEndOf="parent" />
+                    <com.wolasoft.waul.widgets.CustomEditText
+                        android:id="@+id/passwordEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/spacer12"
+                        style="@style/EditTextPassword"
+                        android:hint="@string/account_subscribe_edittext_password_hint"
+                        android:layout_marginTop="@dimen/spacer2"
+                        app:layout_constraintTop_toBottomOf="@id/firstNameEdit"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toEndOf="parent" />
 
-                <Button
-                    android:id="@+id/subscribeButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/ButtonPrimary"
-                    android:layout_marginTop="@dimen/spacer6"
-                    android:text="@string/account_subscribe_button_subscribe"
-                    android:enabled="false"
-                    app:layout_constraintTop_toBottomOf="@id/passwordInfo"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toEndOf="parent" />
+                    <TextView
+                        android:id="@+id/passwordInfo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/account_subscribe_password_info"
+                        style="@style/body2.main"
+                        android:textSize="10sp"
+                        android:layout_marginTop="@dimen/spacer2"
+                        app:layout_constraintTop_toBottomOf="@id/passwordEdit"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toEndOf="parent" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </ScrollView>
+                    <Button
+                        android:id="@+id/subscribeButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/ButtonPrimary"
+                        android:layout_marginTop="@dimen/spacer6"
+                        android:text="@string/account_subscribe_button_subscribe"
+                        android:enabled="false"
+                        app:layout_constraintTop_toBottomOf="@id/passwordInfo"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toEndOf="parent" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:visibility="gone"
-            tools:visibility="visible"
-            android:layout_gravity="center"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </ScrollView>
 
-    </FrameLayout>
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="@style/ProgressBar"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:layout_gravity="center"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
+
 </layout>
