--- a/app/src/main/res/layout/empty_list.xml
+++ b/app/src/main/res/layout/empty_list.xml
@@ -8,7 +8,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableTop="@drawable/ic_shopping_cart_black_24dp"
+        style="@style/body1.text"
+        android:drawableTop="@drawable/no_item"
         android:text="@string/message_empty_list"
         tools:text="@string/message_empty_list"
         android:layout_gravity="center"/>
