--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -24,7 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:drawableTop="@drawable/ic_add_black_24dp"
+                android:gravity="center"
+                android:drawableTop="@drawable/add"
                 android:text="@string/announcement_announcement_creation_title" />
 
         </FrameLayout>
