--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -24,7 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:drawableTop="@drawable/ic_chat_bubble_black_24dp"
+                android:gravity="center"
+                android:drawableTop="@drawable/message"
                 android:text="@string/message_message_title" />
 
         </FrameLayout>
