--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -1,6 +1,6 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:orientation="vertical"
@@ -17,16 +17,172 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_marginStart="@dimen/fragment_horizontal_margin"
+            android:layout_marginLeft="@dimen/fragment_horizontal_margin"
+            android:layout_marginEnd="@dimen/fragment_horizontal_margin"
+            android:layout_marginRight="@dimen/fragment_horizontal_margin"
             tools:context="com.wolasoft.maplenou.views.announcement.create.CreateAnnouncementFragment">
 
-            <!-- TODO: Update blank fragment layout -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/categoryTV"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/subhead.text"
+                        android:text="@string/announcement_creation_category_label"
+                        android:padding="@dimen/spacer4"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+                        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
+                        android:background="@drawable/bg_border_bottom"/>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/titleLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/TextInputLayout"
+                        android:textColorHint="@color/colorPrimaryText"
+                        android:padding="@dimen/spacer4"
+                        app:layout_constraintTop_toBottomOf="@id/categoryTV"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintRight_toRightOf="parent">
+
+                        <EditText
+                            android:id="@+id/titleEdit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/subhead.text"
+                            android:maxLines="2"
+                            android:hint="@string/announcement_creation_title_label"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/priceLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="@color/colorPrimaryText"
+                        android:padding="@dimen/spacer4"
+                        app:layout_constraintTop_toBottomOf="@id/titleLayout"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintRight_toRightOf="parent">
+
+                        <EditText
+                            android:id="@+id/priceEdit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/subhead.text"
+                            android:drawableEnd="@drawable/ic_credit_card_black_24dp"
+                            android:drawableRight="@drawable/ic_credit_card_black_24dp"
+                            android:inputType="number"
+                            android:maxLines="1"
+                            android:hint="@string/announcement_creation_price_label"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/descriptionLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="@color/colorPrimaryText"
+                        android:inputType="text"
+                        android:padding="@dimen/spacer4"
+                        app:layout_constraintTop_toBottomOf="@id/priceLayout"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintRight_toRightOf="parent">
+
+                        <EditText
+                            android:id="@+id/descriptionEdit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/subhead.text"
+                            android:hint="@string/announcement_creation_description_label"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:id="@+id/images"
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:padding="@dimen/spacer4"
+                        app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintRight_toRightOf="parent">
+
+                        <ImageView
+                            android:id="@+id/takePhoto"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:src="@drawable/ic_photo_camera_black_24dp"/>
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/cityTV"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        style="@style/subhead.text"
+                        android:text="@string/announcement_creation_city_label"
+                        android:layout_marginTop="@dimen/spacer2"
+                        android:padding="@dimen/spacer4"
+                        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+                        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
+                        app:layout_constraintTop_toBottomOf="@id/images"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:background="@drawable/bg_border_bottom"/>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/localizationLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="@color/colorPrimaryText"
+                        android:layout_marginTop="@dimen/spacer2"
+                        android:padding="@dimen/spacer4"
+                        app:layout_constraintTop_toBottomOf="@id/cityTV"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintRight_toRightOf="parent">
+
+                        <EditText
+                            android:id="@+id/localizationEdit"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/subhead.text"
+                            android:inputType="text"
+                            android:hint="@string/announcement_creation_localization_label"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </ScrollView>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="@style/ProgressBar"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:drawableTop="@drawable/add"
-                android:text="@string/announcement_announcement_creation_title" />
+                android:visibility="gone"
+                tools:visibility="visible"/>
 
         </FrameLayout>
 
