--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlNormal">@color/colorDivider</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
     </style>
 
     <style name="AppThemeDark.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -15,6 +17,10 @@
     <style name="ProgressBar" parent="@style/Widget.AppCompat.ProgressBar">
         <item name="android:layout_width">@dimen/progress_bar_size</item>
         <item name="android:layout_height">@dimen/progress_bar_size</item>
+    </style>
+
+    <style name="TextInputLayout">
+        <item name="android:textColorHint">@color/colorPrimaryText</item>
     </style>
 
     <!-- Font family (size, color) -->
