--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -28,8 +28,10 @@
                 android:layout_height="match_parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/contentHolder"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/spacer4">
 
                     <TextView
                         android:id="@+id/categoryTV"
@@ -114,25 +116,36 @@
                             android:hint="@string/announcement_creation_description_label"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:id="@+id/images"
+                    <ScrollView
+                        android:id="@+id/scrollView"
                         android:layout_width="0dp"
                         android:layout_height="100dp"
-                        android:padding="@dimen/spacer4"
+                        android:layoutDirection="ltr"
                         app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/selectImage"
+                        app:layout_constraintRight_toLeftOf="@id/selectImage">
+
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:id="@+id/imagesHolder"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/spacer4" />
+                    </ScrollView>
+
+                    <ImageView
+                        android:id="@+id/selectImage"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:src="@drawable/ic_photo_camera_black_24dp"
+                        android:layout_marginEnd="@dimen/spacer2"
+                        android:layout_marginRight="@dimen/spacer2"
+                        app:layout_constraintTop_toTopOf="@id/scrollView"
+                        app:layout_constraintBottom_toBottomOf="@id/scrollView"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintRight_toRightOf="parent">
-
-                        <ImageView
-                            android:id="@+id/takePhoto"
-                            android:layout_width="75dp"
-                            android:layout_height="75dp"
-                            android:src="@drawable/ic_photo_camera_black_24dp"/>
-
-                    </LinearLayout>
+                        app:layout_constraintRight_toRightOf="parent"/>
 
                     <TextView
                         android:id="@+id/cityTV"
@@ -144,7 +157,7 @@
                         android:padding="@dimen/spacer4"
                         android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                         android:drawableRight="@drawable/ic_chevron_right_black_24dp"
-                        app:layout_constraintTop_toBottomOf="@id/images"
+                        app:layout_constraintTop_toBottomOf="@id/scrollView"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -172,6 +185,21 @@
                             android:inputType="text"
                             android:hint="@string/announcement_creation_localization_label"/>
                     </com.google.android.material.textfield.TextInputLayout>
+
+
+                    <Button
+                        android:id="@+id/validateButton"
+                        style="@style/ButtonPrimary"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/spacer4"
+                        android:text="@string/common_action_validate"
+                        android:enabled="true"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintStart_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/localizationLayout" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
