--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="colorSilver">#EEEEEE</color>
     <color name="colorSilverDark">#dee1e4</color>
     <color name="colorSuccess">#81C784</color>
+    <color name="colorFailure">#FFAB91</color>
 </resources>
