--- a/app/src/main/res/layout/fragment_announcement_details.xml
+++ b/app/src/main/res/layout/fragment_announcement_details.xml
@@ -47,16 +47,16 @@
 
                 <TextView
                     android:id="@+id/title"
-                    style="@style/DetailsItemTitle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    style="@style/DetailsItemTitle"
+                    android:text="@{announcement.title}"
                     android:layout_marginStart="@dimen/announcement_details_padding"
                     android:layout_marginLeft="@dimen/announcement_details_padding"
                     android:layout_marginTop="@dimen/spacer4"
                     android:layout_marginEnd="@dimen/announcement_details_padding"
                     android:layout_marginRight="@dimen/announcement_details_padding"
                     android:layout_marginBottom="@dimen/spacer4"
-                    android:text="@{announcement.title}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -90,15 +90,69 @@
 
                 <TextView
                     android:id="@+id/user"
-                    style="@style/DetailsItemDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@{announcement.account.person.fullName()}"
+                    style="@style/DetailsItemDate"
                     android:gravity="end"
                     app:layout_constraintBottom_toBottomOf="@id/creationDate"
                     app:layout_constraintEnd_toEndOf="@id/title"
                     app:layout_constraintRight_toRightOf="@id/title"
                     app:layout_constraintTop_toTopOf="@id/creationDate"
                     tools:text="@string/announcement_label_announcement_user" />
+
+                <LinearLayout
+                    android:id="@+id/contactLayout"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/spacer2"
+                    android:layout_marginTop="@dimen/spacer4"
+                    android:gravity="center"
+                    app:layout_constraintLeft_toLeftOf="@id/creationDate"
+                    app:layout_constraintStart_toStartOf="@id/creationDate"
+                    app:layout_constraintTop_toBottomOf="@id/creationDate">
+
+                    <TextView
+                        android:id="@+id/phoneTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/body1.main"
+                        android:text="@string/common_action_call"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        tools:visibility="visible"
+                        android:drawableTint="@color/colorPrimary"
+                        android:drawableTop="@drawable/ic_phone_24dp"/>
+
+                    <TextView
+                        android:id="@+id/smsTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/body1.main"
+                        android:text="@string/common_action_sms"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        tools:visibility="visible"
+                        android:drawableTint="@color/colorPrimary"
+                        android:drawableTop="@drawable/ic_sms_24dp"/>
+
+                    <TextView
+                        android:id="@+id/emailTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/common_action_email"
+                        style="@style/body1.main"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        tools:visibility="visible"
+                        android:drawableTint="@color/colorPrimary"
+                        android:drawableTop="@drawable/ic_email_24dp"/>
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/descriptionLabel"
@@ -109,7 +163,7 @@
                     android:text="@string/announcement_label_announcement_description"
                     app:layout_constraintLeft_toLeftOf="@id/creationDate"
                     app:layout_constraintStart_toStartOf="@id/creationDate"
-                    app:layout_constraintTop_toBottomOf="@id/creationDate"
+                    app:layout_constraintTop_toBottomOf="@id/contactLayout"
                     tools:text="@string/announcement_label_announcement_description" />
 
                 <TextView
