feat: add logout feat

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorControlNormal">@color/colorDivider</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
+        <item name="android:actionMenuTextColor">@color/colorWhite</item>
     </style>
 
     <style name="AppThemeDark.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
