--- a/app/src/main/res/layout/fragment_announcement_details.xml
+++ b/app/src/main/res/layout/fragment_announcement_details.xml
@@ -15,9 +15,9 @@
 
         <include
             android:id="@+id/appBarContent"
-            layout="@layout/transparent_app_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            layout="@layout/transparent_app_bar"/>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -49,8 +49,8 @@
                     android:id="@+id/title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    style="@style/DetailsItemTitle"
                     android:text="@{announcement.title}"
+                    style="@style/DetailsItemTitle"
                     android:layout_marginStart="@dimen/announcement_details_padding"
                     android:layout_marginLeft="@dimen/announcement_details_padding"
                     android:layout_marginTop="@dimen/spacer4"
@@ -66,10 +66,10 @@
 
                 <TextView
                     android:id="@+id/price"
-                    style="@style/DetailsItemPrice"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:amount="@{announcement.price}"
+                    style="@style/DetailsItemPrice"
                     app:layout_constraintEnd_toEndOf="@id/title"
                     app:layout_constraintLeft_toLeftOf="@id/title"
                     app:layout_constraintRight_toRightOf="@id/title"
@@ -79,9 +79,10 @@
 
                 <TextView
                     android:id="@+id/creationDate"
-                    style="@style/DetailsItemDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    style="@style/DetailsItemDate"
+                    android:layout_marginTop="@dimen/spacer4"
                     android:layout_marginBottom="@dimen/spacer4"
                     app:layout_constraintLeft_toLeftOf="@id/title"
                     app:layout_constraintStart_toStartOf="@id/title"
@@ -89,11 +90,11 @@
                     tools:text="@string/announcement_label_announcement_creation_date" />
 
                 <TextView
-                    android:id="@+id/user"
+                    android:id="@+id/category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{announcement.account.person.fullName()}"
-                    style="@style/DetailsItemDate"
+                    android:text="@{announcement.category.name}"
+                    style="@style/body2.text.bold"
                     android:gravity="end"
                     app:layout_constraintBottom_toBottomOf="@id/creationDate"
                     app:layout_constraintEnd_toEndOf="@id/title"
@@ -106,7 +107,8 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/spacer2"
+                    android:padding="@dimen/spacer4"
+                    android:background="@drawable/bg_top_bottom_line"
                     android:layout_marginTop="@dimen/spacer4"
                     android:gravity="center"
                     app:layout_constraintLeft_toLeftOf="@id/creationDate"
@@ -117,8 +119,8 @@
                         android:id="@+id/phoneTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/body1.main"
                         android:text="@string/common_action_call"
+                        style="@style/body1.main"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:visibility="gone"
@@ -130,8 +132,8 @@
                         android:id="@+id/smsTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        style="@style/body1.main"
                         android:text="@string/common_action_sms"
+                        style="@style/body1.main"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:visibility="gone"
@@ -156,11 +158,11 @@
 
                 <TextView
                     android:id="@+id/descriptionLabel"
-                    style="@style/DetailsItemDescriptionLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacer4"
                     android:text="@string/announcement_label_announcement_description"
+                    style="@style/DetailsItemDescriptionLabel"
+                    android:layout_marginTop="@dimen/spacer4"
                     app:layout_constraintLeft_toLeftOf="@id/creationDate"
                     app:layout_constraintStart_toStartOf="@id/creationDate"
                     app:layout_constraintTop_toBottomOf="@id/contactLayout"
@@ -168,11 +170,11 @@
 
                 <TextView
                     android:id="@+id/description"
-                    style="@style/DetailsItemDescription"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacer2"
                     android:text="@{announcement.description}"
+                    style="@style/DetailsItemDescription"
+                    android:layout_marginTop="@dimen/spacer2"
                     app:layout_constraintEnd_toEndOf="@id/title"
                     app:layout_constraintLeft_toLeftOf="@id/title"
                     app:layout_constraintRight_toRightOf="@id/title"
@@ -206,8 +208,121 @@
                     app:layout_constraintLeft_toLeftOf="@id/title"
                     app:layout_constraintEnd_toEndOf="@id/title"
                     app:layout_constraintRight_toRightOf="@id/title"
-                    app:layout_constraintTop_toBottomOf="@id/divider">
-                </com.google.android.gms.ads.AdView>
+                    app:layout_constraintTop_toBottomOf="@id/divider"/>
+
+                <View
+                    android:id="@+id/secondDivider"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/spacer1"
+                    android:background="@drawable/bg_line"
+                    android:layout_marginTop="@dimen/spacer4"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/adView"/>
+
+                <TextView
+                    android:id="@+id/locationLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/announcement_details_location_label"
+                    style="@style/AnnouncementInfoLine"
+                    app:layout_constraintTop_toBottomOf="@+id/secondDivider"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"/>
+
+                <LinearLayout
+                    android:id="@+id/locationContent"
+                    android:orientation="vertical"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/spacer4"
+                    app:layout_constraintTop_toBottomOf="@+id/locationLabel"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{announcement.city.name}"
+                        style="@style/body1.text"
+                        android:drawableStart="@drawable/ic_near_me_24dp"
+                        android:drawableLeft="@drawable/ic_near_me_24dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{announcement.localization}"
+                        style="@style/body1.text"
+                        android:drawableStart="@drawable/ic_place_24dp"
+                        android:drawableLeft="@drawable/ic_place_24dp"
+                        android:layout_marginTop="@dimen/spacer2"/>
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/thirdDivider"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/spacer1"
+                    android:background="@drawable/bg_line"
+                    android:layout_marginTop="@dimen/spacer1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/locationContent"/>
+
+                <TextView
+                    android:id="@+id/announcerLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/announcement_details_announcer_label"
+                    style="@style/AnnouncementInfoLine"
+                    app:layout_constraintTop_toBottomOf="@+id/thirdDivider"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"/>
+
+                <LinearLayout
+                    android:id="@+id/announcerInfo"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/spacer4"
+                    android:gravity="center"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/announcerLabel">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/announcerImage"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:src="@drawable/ic_person_24dp"
+                        tools:src="@drawable/ic_person_24dp"
+                        android:tint="@color/colorPrimary"
+                        app:civ_border_width="1dp"
+                        app:civ_border_color="@color/colorPrimary"
+                        android:contentDescription="@string/account_details_profile_description"/>
+
+                    <TextView
+                        android:id="@+id/announcerFullName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{announcement.account.person.fullName()}"
+                        style="@style/subhead.text.medium"
+                        android:layout_marginTop="@dimen/spacer2"
+                        android:gravity="center"
+                        tools:text="@string/announcement_label_announcement_user" />
+
+                </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -215,9 +330,9 @@
 
         <include
             android:id="@+id/networkErrorHolder"
-            layout="@layout/network_error"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            layout="@layout/network_error"
             android:visibility="gone"
             tools:visibility="visible" />
 
