--- a/app/src/main/res/values-sw600dp/styles.xml
+++ b/app/src/main/res/values-sw600dp/styles.xml
@@ -9,9 +9,9 @@
         <item name="android:ellipsize">end</item>
     </style>
 
-    <style name="DetailsItemTitle" parent="display1.text.bold"/>
+    <style name="DetailsItemTitle" parent="display1.text.medium"/>
 
-    <style name="DetailsItemPrice" parent="headline.main.bold">
+    <style name="DetailsItemPrice" parent="headline.main.medium">
         <item name="android:maxLines">1</item>
     </style>
 
@@ -23,7 +23,7 @@
         <item name="android:maxLines">1</item>
     </style>
 
-    <style name="DetailsItemDate" parent="subhead.main">
+    <style name="DetailsItemDate" parent="subhead.text">
         <item name="android:maxLines">1</item>
     </style>
 
