--- a/app/src/main/res/layout/fragment_favorite_details.xml
+++ b/app/src/main/res/layout/fragment_favorite_details.xml
@@ -41,7 +41,7 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@drawable/ic_photo_camera_black_24dp" />
+                    tools:src="@drawable/no_image" />
 
                 <TextView
                     android:id="@+id/title"
