--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,7 +11,9 @@
 
     <!--list item-->
     <dimen name="list_item_announcement_width">100dp</dimen>
+    <dimen name="list_item_announcement_account_width">80dp</dimen>
     <dimen name="list_item_announcement_height">90dp</dimen>
+    <dimen name="list_item_announcement_account_height">70dp</dimen>
     <dimen name="list_item_announcement_padding">0dp</dimen>
     <dimen name="list_item_announcement_padding_top">0dp</dimen>
 
